Fix bug - text too close to edge of page
Fixed bug by creating left and right margin on description text.

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ img {
 
 .desc-text {
     color: black; text-align: center;
+    margin: 1rem;
 }
 
 .ingredients-text,
@@ -133,7 +134,8 @@ img {
     border-width: 5px;
     padding: 15px;
     border-color: lightblue;
-    margin: 10px;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 .rec-page {
